mybe the website wont break this time!

--- a/_notebooks/variables/2025-01-09-popcornHax.ipynb
+++ b/_notebooks/variables/2025-01-09-popcornHax.ipynb
@@ -50,7 +50,8 @@
     "<br>\n",
     "After clicking help, the drop-down menu should have a \"Toggle Developer Tools\" option. Click it, and navigate to the console menu.\n",
     "Then, look for a little O with a line through it. Click this to clear the console.\n",
-    "<h2>Exercise 1:</h2><br>\n",
+    "\n",
+    "<h2>Lesson 1, Exercise 1:</h2><br>\n",
     "Define a variable \"charHealth\" as an integer value of 100. Then, run a command to print the value and type of charHealth.\n"
    ]
   },
@@ -489,6 +490,16 @@
     "//Referencing symbols looks like this:\n",
     "console.log(user[password]);\n",
     "//This outputs the value of \"password\" you assigned earlier."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Lesson 2, Exercise 1:</h2>\n",
+    "<b1>\n",
+    "Classes are\n",
+    "</b1>"
    ]
   }
  ],
