updated lessonbook2, static and instanced variables on the way

--- a/_notebooks/variables/2025-01-09-lessonBook2 copy.ipynb
+++ b/_notebooks/variables/2025-01-09-lessonBook2 copy.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -133,7 +133,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "class myClass {\n    static Health = 100; //this is the static variable\n\n    \n    \n}\nconsole.log(Health) \n",
+      "application/javascript": "class myClass {\n    static Health = 100; //this is the static variable\n\n    \n    \n}\nconsole.log(myClass.Health)\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -150,7 +150,50 @@
     "    \n",
     "    \n",
     "}\n",
-    "console.log(Health) "
+    "console.log(myClass.Health)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, lets see if this static variable works in practice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "class Dog {\n    static Health = 100\n    constructor(name, age) {\n        this.name = name\n        this.age = age\n    }\n}\n\nlet myDog = new Dog(\"QuadraticFormula\", 2)\n\nconsole.log(Dog.Health)\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "class Dog {\n",
+    "    static Health = 100\n",
+    "    constructor(name, age) {\n",
+    "        this.name = name\n",
+    "        this.age = age\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "let myDog = new Dog(\"QuadraticFormula\", 2)\n",
+    "\n",
+    "console.log(Dog.Health) //since this variable is shared across all instances, to access this dog's health you access from the class.\n",
+    "//to show that this is truly shared across all classes, lets modify the health then make another dog."
    ]
   }
  ],
