--- a/_notebooks/variables/2025-01-09-popcornHax.ipynb
+++ b/_notebooks/variables/2025-01-09-popcornHax.ipynb
@@ -25,21 +25,20 @@
     "<style>\n",
     "h2 {\n",
     "        text-align: center; \n",
-    "        font-size: 5vw;\n",
+    "        font-size: 24pt;\n",
     "        color: rgb(255, 255, 255);\n",
     "        font-family: \"Oxygen\", Helvetica, sans-serif;\n",
     "    }\n",
     "    h1 {\n",
     "        text-align: left; \n",
-    "        font-size: 24pt; \n",
+    "        font-size: 30pt; \n",
     "        color: rgb(170, 220, 246);\n",
-    "        font-size: 3.5vw;\n",
     "    }\n",
     "    body {\n",
     "        text-align: left; \n",
     "        background-color: rgb(2, 12, 35);\n",
     "        color: rgb(220, 220, 220);\n",
-    "        font-size: 1.5vw;\n",
+    "        font-size: 14px;\n",
     "    }\n",
     "</style>\n",
     "<h1>Popcorn Hax</h1>\n",
@@ -480,7 +479,7 @@
    "source": [
     "%%js \n",
     "const password = Symbol(); //Defines the password symbol. It's okay to leave his empty, as you will assign the symbol a value in the object.\n",
-    "const backupPassword = Symbol(); //\n",
+    "const backupPassword = Symbol(); \n",
     "let user ={\n",
     "    [password]:  //Assign the symbol a value here. \n",
     "    [backupPassword]:  //Assign your backup password a value. Make this the same as your default password.\n",
