--- a/_notebooks/variables/2025-01-09-popcornHax.ipynb
+++ b/_notebooks/variables/2025-01-09-popcornHax.ipynb
@@ -137,7 +137,7 @@
     "let messagePart2 = \n",
     "let finalMessage = \n",
     "//Print results here.\n",
-    "console.log();//Insert variable"
+    "console.log(); //Insert variable"
    ]
   },
   {
@@ -268,24 +268,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": "//Define your variables. \nlet isGreaterThan = false; //By default, this is false. That means if the program doesn't change it, it will stay false and output false\nlet randomNum = Math.random();\nif (randomNum > 0.7) { //Put something in the parentheses to check if the random number is over 0.7.\n    isGreaterThan = true;\n} \nconsole.log(isGreaterThan); //Outputs the value of isGreaterThan\n\n//Run this a few times, and see if you get a mix of true and false outputs.\n",
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%js\n",
     "let isGreaterThan = ; //What should this be defined as by default?\n",
@@ -295,7 +284,7 @@
     "} \n",
     "console.log(); //Output the value of isGreaterThan\n",
     "\n",
-    "//Run this a few times, and see if you get a mix of true and false outputs.\n"
+    "//Run this a few times, and see if you get a mix of true and false outputs."
    ]
   },
   {
