--- a/_notebooks/variables/2025-01-09-lessonBook1.ipynb
+++ b/_notebooks/variables/2025-01-09-lessonBook1.ipynb
@@ -155,12 +155,12 @@
     "<h2>Booleans</h2>\n",
     "Booleans are simple true or false values. They cannot store text or numbers and are only used as conditions. Booleans are either defined as variables (Ex. let online = true;) <strong>or outputted from comparisons using the \"==\", \"<\", \">\", \"<=\", \">=\", or \"!\" operators.</strong> Although they are very simple, booleans are a very important part of programming.\n",
     "<br>\n",
-    "<h3>Example<h3>"
+    "<h3>Example</h3>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -169,7 +169,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "let number1 = Math.random(); //Sets \"number1\" to a number between 0 and 1\nlet number2 = Math.random(); //Sets \"number2\" to a different number between 0 and 1\nlet checkEquation = number1 < number2; //This will set the checkEquation variable to a boolean. If number1 is less than number2, checkEquation will be set to true. Otherwise, it will be false.\n\nconsole.log(checkEquation); //Will output \"true\" if number1 is less than number2 or \"false\" if number1 is not less than number2.\n\nif(checkEquation){ //This is an \"if\" statement, the largest use of booleans. If the boolean inside the parentheses is true, the code inside te statement will run.\n    console.log(\"number1 is less than number2!\");\n}else{\n    console.log(\"number2 is less than number1!\");\n}\n",
+      "application/javascript": "let number1 = Math.random(); //Sets \"number1\" to a number between 0 and 1\nlet number2 = Math.random(); //Sets \"number2\" to a different number between 0 and 1\nlet checkEquation = number1 < number2; //This will set the checkEquation variable to a boolean\n\nconsole.log(checkEquation);\n\nif(checkEquation){\n    console.log(\"number1 is less than number2!\");\n}else{\n    console.log(\"number2 is less than number1!\");\n}\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -182,11 +182,11 @@
     "%%js\n",
     "let number1 = Math.random(); //Sets \"number1\" to a number between 0 and 1\n",
     "let number2 = Math.random(); //Sets \"number2\" to a different number between 0 and 1\n",
-    "let checkEquation = number1 < number2; //This will set the checkEquation variable to a boolean. If number1 is less than number2, checkEquation will be set to true. Otherwise, it will be false.\n",
+    "let checkEquation = number1 < number2; //This will set the checkEquation variable to a boolean\n",
     "\n",
-    "console.log(checkEquation); //Will output \"true\" if number1 is less than number2 or \"false\" if number1 is not less than number2.\n",
+    "console.log(checkEquation);\n",
     "\n",
-    "if(checkEquation){ //This is an \"if\" statement, the largest use of booleans. If the boolean inside the parentheses is true, the code inside te statement will run.\n",
+    "if(checkEquation){\n",
     "    console.log(\"number1 is less than number2!\");\n",
     "}else{\n",
     "    console.log(\"number2 is less than number1!\");\n",
@@ -207,13 +207,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "let player = {name: \"West\", health: 100, canHeal: true}; //Creates an object called \"player\". The curly brackets ({}) indicate the start and end of the object definition.\nconsole.log(player.name); //will output \"West\"\nconsole.log(player.health); //will output \"1000\"\nplayer.health = 50;\nconsole.log(player.health); //will output \"50\"\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%js\n",
     "let player = {name: \"West\", health: 100, canHeal: true}; //Creates an object called \"player\". The curly brackets ({}) indicate the start and end of the object definition.\n",
@@ -235,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -279,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -288,7 +299,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "let veryBigNumber = 999999999999999999999999n; //The \"n\" at the end of the number marks this as a BigInt instead of a number.\nconsole.log(veryBigNumber); //Outputs the BigInt\n//Math functions like +, -, and Math.random cannot be used with BigInts.\n",
+      "application/javascript": "let veryBigNumber = 999999999999999999999999n; //The \"n\" at the end of the number marks this as a BigInt instead of a number.\nconsole.log(veryBigNumber); //Outputs the BigInt\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -300,8 +311,7 @@
    "source": [
     "%%js\n",
     "let veryBigNumber = 999999999999999999999999n; //The \"n\" at the end of the number marks this as a BigInt instead of a number.\n",
-    "console.log(veryBigNumber); //Outputs the BigInt\n",
-    "//Math functions like +, -, and Math.random cannot be used with BigInts.\n"
+    "console.log(veryBigNumber); //Outputs the BigInt"
    ]
   },
   {
@@ -316,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -354,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
