--- a/_notebooks/variables/2025-01-09-lessonBook2 copy.ipynb
+++ b/_notebooks/variables/2025-01-09-lessonBook2 copy.ipynb
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Static variables are variables that are \"static\" throughout all instances of the class. They can be accessed directly in the class without having to make a instance."
+    "Static variables are variables that are \"static\" throughout all instances of the class. They can also be accessed directly in the class without having to make a instance."
    ]
   },
   {
@@ -144,13 +144,20 @@
    ],
    "source": [
     "%%js \n",
-    "class myClass {\n",
+    "class myCharacter {\n",
     "    static Health = 100; //this is the static variable\n",
     "\n",
     "    \n",
     "    \n",
     "}\n",
-    "console.log(myClass.Health)"
+    "console.log(myCharacter.Health)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example, the static variable, noted by the \"static\" keyword, defines Health for the class \"Mycharacter.\" If I were to make another character under the class Mycharacter, this health value would become a shared health pool - if one character takes damage the other's health is affected as well."
    ]
   },
   {
@@ -185,15 +192,41 @@
     "class Dog {\n",
     "    static Health = 100\n",
     "    constructor(name, age) {\n",
-    "        this.name = name\n",
+    "        this.name = name // I wonder what kind of variable this is\n",
     "        this.age = age\n",
     "    }\n",
     "}\n",
     "\n",
     "let myDog = new Dog(\"QuadraticFormula\", 2)\n",
-    "\n",
+    "console.log(myDog.name)\n",
     "console.log(Dog.Health) //since this variable is shared across all instances, to access this dog's health you access from the class.\n",
-    "//to show that this is truly shared across all classes, lets modify the health then make another dog."
+    "//to show that this is truly shared across all classes, lets modify the health then make another dog.\n",
+    "Dog.Health = 75\n",
+    "\n",
+    "let otherDog = new Dog(\"woke up on both sides of the bed\", 10)\n",
+    "console.log(otherDog.name)\n",
+    "console.log(Dog.Health) //accessing this dog's health"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Other common use cases for Static Variables are counters, configuration settings, global constants, and could even be used to store base stats for characters in a video game"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "><h2>Instanced Variables</h2>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, you may have seen another kind of variable in my example above."
    ]
   }
  ],
