--- a/_notebooks/variables/2025-01-09-lessonBook2 copy.ipynb
+++ b/_notebooks/variables/2025-01-09-lessonBook2 copy.ipynb
@@ -1,7 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "raw"
