removed old lesson 2, renamed old 2 to 2

--- a/_notebooks/2025-01-09-lessonBook2.ipynb
+++ b/_notebooks/2025-01-09-lessonBook2.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -105,7 +105,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You now know how to define variables and vaguely know how to use them. However you cannot fully use them to accomplish a goal. Your homework will be used as an example for how to use the variables after you define them."
+    "You now know how to define variables and vaguely know how to use them. However, with OOP programming there are many more variable types."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "><h2>Static Variable</h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Static variables are variables that are \"static\" throughout all instances of the class. They can also be accessed directly in the class without having to make a instance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "class myClass {\n    static Health = 100; //this is the static variable\n\n    \n    \n}\nconsole.log(myClass.Health)\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js \n",
+    "class myCharacter {\n",
+    "    static Health = 100; //this is the static variable\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "}\n",
+    "console.log(myCharacter.Health)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example, the static variable, noted by the \"static\" keyword, defines Health for the class \"Mycharacter.\" If I were to make another character under the class Mycharacter, this health value would become a shared health pool - if one character takes damage the other's health is affected as well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, lets see if this static variable works in practice."
    ]
   },
   {
@@ -116,197 +175,64 @@
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "class Dog {\n    static Health = 100\n    constructor(name, age) {\n        this.name = name\n        this.age = age\n    }\n}\n\nlet myDog = new Dog(\"QuadraticFormula\", 2)\n\nconsole.log(Dog.Health)\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%js\n",
-    "\n",
-    "let spaceship = \"Mort's Flying Monkey\";\n",
-    "let initialFuel = 100; \n",
-    "let distanceTraveled = 0; \n",
-    "let fuelConsumptionRate = 2; \n",
-    "\n",
-    "let selectedFuel = 50; \n",
-    "let missionStatus = \"\"; \n",
-    "let fuelDrops = Math.floor(Math.random() * 3) + 1; \n",
-    "\n",
-    "\n",
-    "function collectFuel(currentFuel, distance) {\n",
-    "  let fuelCollected = Math.floor(Math.random() * 20) + 10; \n",
-    "  console.log(`At distance ${distance}, a fuel drop was found! Collected ${fuelCollected} fuel.`);\n",
-    "  return currentFuel + fuelCollected;\n",
+    "class Dog {\n",
+    "    static Health = 100\n",
+    "    constructor(name, age) {\n",
+    "        this.name = name // I wonder what kind of variable this is\n",
+    "        this.age = age\n",
+    "    }\n",
     "}\n",
     "\n",
-    "if (selectedFuel > initialFuel) {\n",
-    "  missionStatus = \"Mission failed. Not enough fuel!\";\n",
-    "} else if (selectedFuel <= 0) {\n",
-    "  missionStatus = \"Mission aborted. Fuel must be greater than zero.\";\n",
-    "} else {\n",
+    "let myDog = new Dog(\"QuadraticFormula\", 2)\n",
+    "console.log(myDog.name)\n",
+    "console.log(Dog.Health) //since this variable is shared across all instances, to access this dog's health you access from the class.\n",
+    "//to show that this is truly shared across all classes, lets modify the health then make another dog.\n",
+    "Dog.Health = 75\n",
     "\n",
-    "  for (let i = 0; i < fuelDrops; i++) {\n",
-    "   \n",
-    "    distanceTraveled += selectedFuel / fuelConsumptionRate;\n",
-    "    initialFuel -= selectedFuel;\n",
-    "\n",
-    "    \n",
-    "    if (initialFuel <= 0) {\n",
-    "      missionStatus = `Mission failed! The spaceship ran out of fuel after traveling ${distanceTraveled} units.`;\n",
-    "      break;\n",
-    "    }\n",
-    "\n",
-    "    \n",
-    "    initialFuel = collectFuel(initialFuel, distanceTraveled);\n",
-    "  }\n",
-    "\n",
-    "  \n",
-    "  if (initialFuel > 0) {\n",
-    "    missionStatus = `Mission successful! The spaceship ${spaceship} traveled ${distanceTraveled} units of distance. Remaining fuel: ${initialFuel}`;\n",
-    "  }\n",
-    "}\n",
-    "\n",
-    "console.log(`Spaceship: ${spaceship}`);\n",
-    "console.log(`Fuel given: ${selectedFuel}`);\n",
-    "console.log(`Distance traveled: ${distanceTraveled}`);\n",
-    "console.log(`Remaining fuel: ${initialFuel}`);\n",
-    "console.log(`Mission Status: ${missionStatus}`);"
+    "let otherDog = new Dog(\"woke up on both sides of the bed\", 10)\n",
+    "console.log(otherDog.name)\n",
+    "console.log(Dog.Health) //accessing this dog's health"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Level 2 homework for lesson 1, you filled in the blanks, however you may have noticed that most of the middle was given and may have been confused on how to get that information and make it. This will go step by step to explain how to apply the variables using the homework as an example."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "function collectFuel(currentFuel, distance) {\n",
-    "    let fuelCollected = Math.floor(Math.random() * 20) + 10; \n",
-    "    console.log(`At distance ${distance}, a fuel drop was found! Collected ${fuelCollected} fuel.`);\n",
-    "    return currentFuel + fuelCollected;\n",
-    "  }"
+    "Other common use cases for Static Variables are counters, configuration settings, global constants, and could even be used to store base stats for characters in a video game"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- In this first bit of the homework, a function is created to create the addition of random fuel during the mission.\n",
-    "- The second line is used to randomely generate an amount of fuel to add \n",
-    "    - This ranges from 0 to 20; But the 10 makes the minimum fuel to be ten.\n",
-    "- For base information, the math.random() chooses between the number and math.floor() rounds down to nearest whole number\n",
-    "- The console.log returns a message to the console with the new information \n",
-    "- the return updates fuel with the new amount"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "if (selectedFuel > initialFuel) {\n",
-    "    missionStatus = \"Mission failed. Not enough fuel!\";\n",
-    "  } else if (selectedFuel <= 0) {\n",
-    "    missionStatus = \"Mission aborted. Fuel must be greater than zero.\";\n",
-    "  } else {\n",
-    "    // Proceed to the mission loop\n",
-    "  }\n",
-    "  "
+    "><h2>Instanced Variables</h2>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- This is else statement makes sure the starting conditions are valid.\n",
-    "    - If thie conditions fail it stops further running of code\n",
-    "- ##### Condition 1\n",
-    "    - Checks if given fuel (selectedFuel) exceeds starting fuel (initialFuel)\n",
-    "    - If true, mission fails\n",
-    "- ##### Condition 2\n",
-    "    - selectedFuel <= 0 makes sure the fuel is positive since 0/negative = failed. If true the mission is aborted\n",
-    "    - If neither is true, then continues running (the else)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "for (let i = 0; i < fuelDrops; i++) {\n",
-    "    distanceTraveled += selectedFuel / fuelConsumptionRate;\n",
-    "    initialFuel -= selectedFuel;\n",
-    "  \n",
-    "    if (initialFuel <= 0) {\n",
-    "      missionStatus = `Mission failed! The spaceship ran out of fuel after traveling ${distanceTraveled} units.`;\n",
-    "      break;\n",
-    "    }\n",
-    "  \n",
-    "    initialFuel = collectFuel(initialFuel, distanceTraveled);\n",
-    "  }  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- This code is used to run the mission by goes through the stages both we defined above (fuelDrops) and the variables.\n",
-    "- \"distanceTraveled += selectedFuel / fuelConsumptionRate;\" calculates the distance the spaceshop travelse and adds it to distanceTraveled\n",
-    "- \"initialFuel -= selectedFuel;\" subtracts the given fuel from the available fuel (initialFuel)\n",
-    "- \"if (initialFuel <= 0)\" is the second fuel check and if the variable is 0/negative mission status updates to a failure and the break exits the loop\n",
-    "- \"initialFuel = collectFuel(initialFuel, distanceTraveled);\" calls the collectFuel function from earlier to run\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "if (initialFuel > 0) {\n",
-    "    missionStatus = `Mission successful! The spaceship ${spaceship} traveled ${distanceTraveled} units of distance. Remaining fuel: ${initialFuel}`;\n",
-    "  }\n",
-    "\n",
-    "console.log(`Spaceship: ${spaceship}`);\n",
-    "console.log(`Fuel given: ${selectedFuel}`);\n",
-    "console.log(`Distance traveled: ${distanceTraveled}`);\n",
-    "console.log(`Remaining fuel: ${initialFuel}`);\n",
-    "console.log(`Mission Status: ${missionStatus}`);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This determines if the mission was succesful once the loop finishes.\n",
-    "- if \"initialFuel > 0\", missionStatus is updated to showcase total distance traveled, remaining fuel, and spaceship name through \"console.log\""
+    "Now, you may have seen another kind of variable in my example above."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test2",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -320,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
