button - and more front matter

--- a/_notebooks/2025-01-09-lessonBook1.ipynb
+++ b/_notebooks/2025-01-09-lessonBook1.ipynb
@@ -23,7 +23,7 @@
     "---\n",
     "layout: post\n",
     "title: Lesson 1\n",
-    "description: An introduction to variables and data types.\n",
+    "description: Read the text below!\n",
     "type: collab\n",
     "comments: false\n",
     "permalink: /variables/lessonBook1\n",
