Updated index links

--- a/_notebooks/2025-01-09-popcornHaxAnswerKey.ipynb
+++ b/_notebooks/2025-01-09-popcornHaxAnswerKey.ipynb
@@ -13,7 +13,7 @@
     "title: Popcorn Hax Answer Key\n",
     "description: Examples of correct answers for the Popcorn Hax Page.\n",
     "type: collab\n",
-    "comments: true\n",
+    "comments: false\n",
     "permalink: /variables/popcornHaxAnswerKey\n",
     "---"
    ]
