fixing chunk text

--- a/_notebooks/2025-01-09-homework.ipynb
+++ b/_notebooks/2025-01-09-homework.ipynb
@@ -68,13 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<html>\n",
-    "<style>\n",
-    "u {\n",
-    "    text-decoration: underline;\n",
-    "}\n",
-    "</style>\n",
-    "Define a variable \"playerLimit\" that <u>cannot be re-assigned</u> and give it a value of 4. This will prevent the raggamuffins from ruining your game."
+    "Define a variable \"playerLimit\" that cannot be re-assigned and give it a value of 4. This will prevent the raggamuffins from ruining your game."
    ]
   },
   {
@@ -214,7 +208,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%%js"
+   ]
   },
   {
    "cell_type": "markdown",
