fixing popcorn hax

--- a/_notebooks/2025-01-09-popcornHax.ipynb
+++ b/_notebooks/2025-01-09-popcornHax.ipynb
@@ -259,11 +259,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Exercise 4:</h2>\n",
-    "<br>\n",
-    "<b1>\n",
-    "Here, a Math.random function creates a number from 0 to 1. Using the conditional set up for you and your knowledge of booleans, create a system that checks if the number created is greater than 0.7.\n",
-    "<b1>"
+    "<h2>Exercise 4:</h2><br>\n",
+    "Here, a Math.random function creates a number from 0 to 1. Using the conditional set up for you and your knowledge of booleans, create a system that checks if the number created is greater than 0.7."
    ]
   },
   {
@@ -291,11 +288,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Exercise 5:</h2>\n",
-    "<br>\n",
-    "<b1>\n",
-    "Fix this code to correctly output the type of data message1 is.<br><br>In code, undefined and null are not used intentionally very often. This exercise is an example on why it is useful: since message1 is not defined, you can check this with console.log(). If this results in an undefined output, you can go change the variable to be correctly defined.\n",
-    "<b1>"
+    "<h2>Exercise 5:</h2><br>\n",
+    "- Fix this code to correctly output the type of data message1 is.\n",
+    "- In code, undefined and null are not used intentionally very often. This exercise is an example on why it is useful: since message1 is not defined, you can check this with console.log(). If this results in an undefined output, you can go change the variable to be correctly defined."
    ]
   },
   {
@@ -331,10 +326,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Exercise 6:</h2>\n",
-    "<br>\n",
-    "<b1>\n",
-    "Create a bigInt with a value of your choosing. Check to make sure it's a big enough number. The highest number in JS is 9007199254740990, and can be referenced with the property Number.MAX_SAFE_INTEGER.</b1>"
+    "<h2>Exercise 6:</h2><br>\n",
+    "Create a bigInt with a value of your choosing. Check to make sure it's a big enough number. The highest number in JS is 9007199254740990, and can be referenced with the property Number.MAX_SAFE_INTEGER."
    ]
   },
   {
@@ -369,10 +362,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Exercise 7:</h2>\n",
-    "<br>\n",
-    "<b1>\n",
-    "Create a \"player\" object with as many properties as you can think of. A minimum of 5 properties and at least 3 different types of variables must be used to complete this exercise.<br><br>After this, print 2 of those variables. One has already been done for you, and the other started. Lastly, change the player's health and print it again.</b1>"
+    "<h2>Exercise 7:</h2><br>\n",
+    "- Create a \"player\" object with as many properties as you can think of. A minimum of 5 properties and at least 3 different types of variables must be used to complete this exercise.\n",
+    "- After this, print 2 of those variables. One has already been done for you, and the other started. Lastly, change the player's health and print it again."
    ]
   },
   {
@@ -419,11 +411,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Exercise 8:</h2>\n",
-    "<br>\n",
-    "<b1>\n",
-    "Create a \"user\" object with a password variable as a symbol. Other than that, customize the object similarly to the previous exercise (Minimum of 5 variables, minimum of 3 types). There's a nifty little bonus at the bottom of this exercise which shows the power of symbols.\n",
-    "</b1>"
+    "<h2>Exercise 8:</h2><br>\n",
+    "Create a \"user\" object with a password variable as a symbol. Other than that, customize the object similarly to the previous exercise (Minimum of 5 variables, minimum of 3 types). There's a nifty little bonus at the bottom of this exercise which shows the power of symbols."
    ]
   },
   {
