fixing completed popcorn hax

--- a/_notebooks/2025-01-09-popcornHaxAnswerKey.ipynb
+++ b/_notebooks/2025-01-09-popcornHaxAnswerKey.ipynb
@@ -23,9 +23,14 @@
    "metadata": {},
    "source": [
     "<h1>Popcorn Hax Answer Key</h1>\n",
-    "\n",
-    "This file contains example answers for all the Hax. There are many right answers to every question, so don't panic if your answer does not exactly match ours. If it gets to the same endpoint, it's all good.<br><br>\n",
-    "<h2>Exercise 1:<h2>"
+    "- This file contains example answers for all the Hax. There are many right answers to every question, so don't panic if your answer does not exactly match ours. If it gets to the same endpoint, it's all good."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Exercise 1:</h2>"
    ]
   },
   {
@@ -65,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Exercise 2:<h2>"
+    "<h2>Exercise 2:</h2>"
    ]
   },
   {
