--- a/_notebooks/2025-01-09-lessonBook2.ipynb
+++ b/_notebooks/2025-01-09-lessonBook2.ipynb
@@ -14,7 +14,7 @@
     "description: Now that you know the types of variables, let's see how they can be used in different real-world contexts.\n",
     "type: collab\n",
     "comments: false\n",
-    "permalink: /variables/lessonBook2\n",
+    "permalink: /variables/lessonBook2real\n",
     "---"
    ]
   },
@@ -91,7 +91,131 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Space for. other menial information"
+    "Now, lets see variables being used in a a full \"game\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "\nlet spaceship = \"Mort's Flying Monkey\";\nlet initialFuel = 100; \nlet distanceTraveled = 0; \nlet fuelConsumptionRate = 2; \n\nlet selectedFuel = 50; \nlet missionStatus = \"\"; \nlet fuelDrops = Math.floor(Math.random() * 3) + 1; \n\n\nfunction collectFuel(currentFuel, distance) {\n  let fuelCollected = Math.floor(Math.random() * 20) + 10; \n  console.log(`At distance ${distance}, a fuel drop was found! Collected ${fuelCollected} fuel.`);\n  return currentFuel + fuelCollected;\n}\n\nif (selectedFuel > initialFuel) {\n  missionStatus = \"Mission failed. Not enough fuel!\";\n} else if (selectedFuel <= 0) {\n  missionStatus = \"Mission aborted. Fuel must be greater than zero.\";\n} else {\n\n  for (let i = 0; i < fuelDrops; i++) {\n   \n    distanceTraveled += selectedFuel / fuelConsumptionRate;\n    initialFuel -= selectedFuel;\n\n    \n    if (initialFuel <= 0) {\n      missionStatus = `Mission failed! The spaceship ran out of fuel after traveling ${distanceTraveled} units.`;\n      break;\n    }\n\n    \n    initialFuel = collectFuel(initialFuel, distanceTraveled);\n  }\n\n  \n  if (initialFuel > 0) {\n    missionStatus = `Mission successful! The spaceship ${spaceship} traveled ${distanceTraveled} units of distance. Remaining fuel: ${initialFuel}`;\n  }\n}\n\nconsole.log(`Spaceship: ${spaceship}`);\nconsole.log(`Fuel given: ${selectedFuel}`);\nconsole.log(`Distance traveled: ${distanceTraveled}`);\nconsole.log(`Remaining fuel: ${initialFuel}`);\nconsole.log(`Mission Status: ${missionStatus}`);\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "\n",
+    "let spaceship = \"Mort's Flying Monkey\";\n",
+    "let initialFuel = 100; \n",
+    "let distanceTraveled = 0; \n",
+    "let fuelConsumptionRate = 2; \n",
+    "\n",
+    "let selectedFuel = 50; \n",
+    "let missionStatus = \"\"; \n",
+    "let fuelDrops = Math.floor(Math.random() * 3) + 1; \n",
+    "\n",
+    "\n",
+    "function collectFuel(currentFuel, distance) {\n",
+    "  let fuelCollected = Math.floor(Math.random() * 20) + 10; \n",
+    "  console.log(`At distance ${distance}, a fuel drop was found! Collected ${fuelCollected} fuel.`);\n",
+    "  return currentFuel + fuelCollected;\n",
+    "}\n",
+    "\n",
+    "if (selectedFuel > initialFuel) {\n",
+    "  missionStatus = \"Mission failed. Not enough fuel!\";\n",
+    "} else if (selectedFuel <= 0) {\n",
+    "  missionStatus = \"Mission aborted. Fuel must be greater than zero.\";\n",
+    "} else {\n",
+    "\n",
+    "  for (let i = 0; i < fuelDrops; i++) {\n",
+    "   \n",
+    "    distanceTraveled += selectedFuel / fuelConsumptionRate;\n",
+    "    initialFuel -= selectedFuel;\n",
+    "\n",
+    "    \n",
+    "    if (initialFuel <= 0) {\n",
+    "      missionStatus = `Mission failed! The spaceship ran out of fuel after traveling ${distanceTraveled} units.`;\n",
+    "      break;\n",
+    "    }\n",
+    "\n",
+    "    \n",
+    "    initialFuel = collectFuel(initialFuel, distanceTraveled);\n",
+    "  }\n",
+    "\n",
+    "  \n",
+    "  if (initialFuel > 0) {\n",
+    "    missionStatus = `Mission successful! The spaceship ${spaceship} traveled ${distanceTraveled} units of distance. Remaining fuel: ${initialFuel}`;\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "console.log(`Spaceship: ${spaceship}`);\n",
+    "console.log(`Fuel given: ${selectedFuel}`);\n",
+    "console.log(`Distance traveled: ${distanceTraveled}`);\n",
+    "console.log(`Remaining fuel: ${initialFuel}`);\n",
+    "console.log(`Mission Status: ${missionStatus}`);\n",
+    "// hi down here... yes we know this doesnt use any of the cool variable types we talked about last lesson sorry not sorry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "function collectFuel(currentFuel, distance) {\n",
+    "    let fuelCollected = Math.floor(Math.random() * 20) + 10; \n",
+    "    console.log(`At distance ${distance}, a fuel drop was found! Collected ${fuelCollected} fuel.`);\n",
+    "    return currentFuel + fuelCollected;\n",
+    "  }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- In this first bit of the code, a function is created to add a random amount of fuel to the fuelCollected variable that was previously defined"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "if (selectedFuel > initialFuel) {\n",
+    "    missionStatus = \"Mission failed. Not enough fuel!\";\n",
+    "  } else if (selectedFuel <= 0) {\n",
+    "    missionStatus = \"Mission aborted. Fuel must be greater than zero.\";\n",
+    "  } else {\n",
+    "    // Proceed to the mission loop\n",
+    "  }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- In this part of the code, the values inside variables are being compared. Trying to do this without variables would be very, very, very, very, extremely, extremely annoying and maybe even not possible"
    ]
   },
   {
@@ -169,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -178,7 +302,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "class Dog {\n    static Health = 100\n    constructor(name, age) {\n        this.name = name\n        this.age = age\n    }\n}\n\nlet myDog = new Dog(\"QuadraticFormula\", 2)\n\nconsole.log(Dog.Health)\n",
+      "application/javascript": "class Dog {\n    static Health = 100\n    constructor(name, age) {\n        this.name = name // I wonder what kind of variable this is\n        this.age = age\n    }\n}\n\nlet myDog = new Dog(\"QuadraticFormula\", 2)\nconsole.log(myDog.name)\nconsole.log(Dog.Health) //since this variable is shared across all instances, to access this dog's health you access from the class.\n//to show that this is truly shared across all classes, lets modify the health then make another dog.\nDog.Health = 75\n\nlet otherDog = new Dog(\"woke up on both sides of the bed\", 10)\nconsole.log(otherDog.name)\nconsole.log(Dog.Health) //accessing this dog's health\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -226,7 +350,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, you may have seen another kind of variable in my example above."
+    "Now, you may have seen another kind of variable in my example above. What is this? you might ask. Well, as the tile suggests, this is an instanced variable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As the name suggests, an instanced variable can be set differently for any instance of a class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "class Character {\n    constructor(health){\n    this.health = health\n    }\n\n}\nglobalThis.devonmistry = new Character(5);\ndevonmistry.health = 2; //damaging devon \nconsole.log(devonmistry.health);\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "class Character {\n",
+    "    constructor(health){\n",
+    "    this.health = health\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "globalThis.devonmistry = new Character(5);\n",
+    "devonmistry.health = 2; //damaging devon \n",
+    "console.log(devonmistry.health);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So in this example, health as a whole defines the health of the character (yeah who woulda guessed). \"this.health\" however creates an instance of this health variable for every character that is under this class. These instanced variables are only accessible in the object and changing one instance does not affect any others."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "// just so you guys can see that I'm not lying\nclass Character {\n    constructor(health) {\n    this.health = health\n    }\n\n}\nglobalThis.devonmistry = new Character(5)\nglobalThis.evansvetina = new Character(7)\nglobalThis.weststefani = new Character(9)\n\ndevonmistry.health =2 //damaging devon\nevansvetina.health =1 //damaging evan\nweststefani.health =3 //damaging west\nconsole.log(devonmistry.health)\nconsole.log(evansvetina.health)\nconsole.log(weststefani.health)\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "// just so you guys can see that I'm not lying\n",
+    "class Character {\n",
+    "    constructor(health) {\n",
+    "    this.health = health\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "globalThis.devonmistry = new Character(5)\n",
+    "globalThis.evansvetina = new Character(7)\n",
+    "globalThis.weststefani = new Character(9)\n",
+    "\n",
+    "devonmistry.health =2 //damaging devon\n",
+    "evansvetina.health =1 //damaging evan\n",
+    "weststefani.health =3 //damaging west\n",
+    "console.log(devonmistry.health)\n",
+    "console.log(evansvetina.health)\n",
+    "console.log(weststefani.health)"
    ]
   }
  ],
