--- a/_notebooks/2025-01-09-lessonBook2.ipynb
+++ b/_notebooks/2025-01-09-lessonBook2.ipynb
@@ -324,7 +324,9 @@
     "let myDog = new Dog(\"QuadraticFormula\", 2)\n",
     "console.log(myDog.name)\n",
     "console.log(Dog.Health) //since this variable is shared across all instances, to access this dog's health you access from the class.\n",
+    "\n",
     "//to show that this is truly shared across all classes, lets modify the health then make another dog.\n",
+    "\n",
     "Dog.Health = 75\n",
     "\n",
     "let otherDog = new Dog(\"woke up on both sides of the bed\", 10)\n",
@@ -362,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -388,9 +390,9 @@
     "    }\n",
     "\n",
     "}\n",
-    "globalThis.devonmistry = new Character(5);\n",
-    "devonmistry.health = 2; //damaging devon \n",
-    "console.log(devonmistry.health);"
+    "globalThis.dumbmist = new Character(5);\n",
+    "dumbmist.health = 2; //damaging devon \n",
+    "console.log(dumbmist.health);"
    ]
   },
   {
@@ -422,21 +424,21 @@
    ],
    "source": [
     "%%js\n",
-    "// just so you guys can see that I'm not lying\n",
+    "// just so you guys can see that Im not lying\n",
     "class Character {\n",
     "    constructor(health) {\n",
     "    this.health = health\n",
     "    }\n",
     "\n",
     "}\n",
-    "globalThis.devonmistry = new Character(5)\n",
+    "globalThis.dumbmist = new Character(5)\n",
     "globalThis.evansvetina = new Character(7)\n",
     "globalThis.weststefani = new Character(9)\n",
     "\n",
-    "devonmistry.health =2 //damaging devon\n",
+    "dumbmist.health =2 //damaging devon\n",
     "evansvetina.health =1 //damaging evan\n",
     "weststefani.health =3 //damaging west\n",
-    "console.log(devonmistry.health)\n",
+    "console.log(dumbmist.health)\n",
     "console.log(evansvetina.health)\n",
     "console.log(weststefani.health)"
    ]
