--- a/_notebooks/2025-01-09-popcornHaxAnswerKey.ipynb
+++ b/_notebooks/2025-01-09-popcornHaxAnswerKey.ipynb
@@ -469,11 +469,66 @@
     "//This, surprisingly, will output false. This is because each of these symbols are fully, entirely unique. \n",
     "//Even though both are symbol type variables with the same value stored inside them, the computer recognizes these both as unique items since they are different symbols."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Lesson 2, Exercise 1</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "class Player {\n    static totalPlayers = 0 //hmm I wonder if this blank might have anything to do with line 4 after the .\n\n    constructor(name) {\n        this.name = name // i wonder what name could be\n        this.id = ++Player.totalPlayers\n    }\n\n    static getTotalPlayers() { // this is the thing that will give you the number of players. remember to put a Player. in front\n        return Player.totalPlayers\n    }\n}\nconst player1 = new Player(\"RedIsSus\")\nconst player2 = new Player(\"Jimmy\")\n// I wonder if making new players would increase the player count\n\nconsole.log(Player.getTotalPlayers()) // you want to print the *function* that will give you the player numbers\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js \n",
+    "class Player {\n",
+    "    static totalPlayers = 0 //hmm I wonder if this blank might have anything to do with line 4 after the .\n",
+    "\n",
+    "    constructor(name) {\n",
+    "        this.name = name // i wonder what name could be\n",
+    "        this.id = ++Player.totalPlayers\n",
+    "    }\n",
+    "\n",
+    "    static getTotalPlayers() { // this is the thing that will give you the number of players. remember to put a Player. in front\n",
+    "        return Player.totalPlayers\n",
+    "    }\n",
+    "}\n",
+    "const player1 = new Player(\"RedIsSus\")\n",
+    "const player2 = new Player(\"Jimmy\")\n",
+    "// I wonder if making new players would increase the player count\n",
+    "\n",
+    "console.log(Player.getTotalPlayers()) // you want to print the *function* that will give you the player numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Exercise dos<h2>"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test2",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -487,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
