--- a/_notebooks/2025-01-09-popcornHax.ipynb
+++ b/_notebooks/2025-01-09-popcornHax.ipynb
@@ -456,14 +456,80 @@
    "source": [
     "<h2>Lesson 2, Exercise 1:</h2>\n",
     "<b1>\n",
-    "Classes are\n",
+    "btw, classes are thing that you will learn later. I'm not explaining them now jus roll with it\n",
     "</b1>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imagine this: you have a brand-spankin' shiny new game that you made, and you want to keep track of how many players you have. Using context clues and my helpful comments, fill in the blanks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, try and see if you can make the player number increase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "class Player {\n    static _____ = 0 //hmm I wonder if this blank might have anything to do with line 4 after the .\n\n    constructor(name) {\n        this.____ = name // i wonder what name could be\n        this.id = ++Player.totalPlayers\n    }\n\n    static getTotalPlayers() { // this is the thing that will give you the number of players\n        return Player.totalPlayers\n    }\n}\nconst player1 = new Player(\"RedIsSus\")\nconst player2 = new Player(\"Jimmy\")\n// I wonder if making new players would increase the player count\n\nconsole.log(_______________) // you want to print the *function* that will give you the player numbers\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js \n",
+    "class Player {\n",
+    "    static _____ = 0 //hmm I wonder if this blank might have anything to do with line 4 after the .\n",
+    "\n",
+    "    constructor(name) {\n",
+    "        this.____ = name // i wonder what name could be\n",
+    "        this.id = ++Player.totalPlayers\n",
+    "    }\n",
+    "\n",
+    "    static getTotalPlayers() { // this is the thing that will give you the number of players\n",
+    "        return Player.totalPlayers\n",
+    "    }\n",
+    "}\n",
+    "const player1 = new Player(\"RedIsSus\")\n",
+    "const player2 = new Player(\"Jimmy\")\n",
+    "// I wonder if making new players would increase the player count\n",
+    "\n",
+    "console.log(_______________) // you want to print the *function* that will give you the player numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test2",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -477,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
