--- a/_notebooks/2025-01-09-popcornHax.ipynb
+++ b/_notebooks/2025-01-09-popcornHax.ipynb
@@ -471,12 +471,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, try and see if you can make the player number increase"
+    "Next, try and see if you can make the player number increase."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -485,7 +485,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "class Player {\n    static _____ = 0 //hmm I wonder if this blank might have anything to do with line 4 after the .\n\n    constructor(name) {\n        this.____ = name // i wonder what name could be\n        this.id = ++Player.totalPlayers\n    }\n\n    static getTotalPlayers() { // this is the thing that will give you the number of players\n        return Player.totalPlayers\n    }\n}\nconst player1 = new Player(\"RedIsSus\")\nconst player2 = new Player(\"Jimmy\")\n// I wonder if making new players would increase the player count\n\nconsole.log(_______________) // you want to print the *function* that will give you the player numbers\n",
+      "application/javascript": "class Player {\n    static ____ = 0 //Hmm I wonder what the constant, \"global\" variable could be in this context (pick from either totalPlayers or name)\n\n    constructor(name) {\n        this.____ = name // I wonder what name could be\n        this.id = ++Player.totalPlayers\n    }\n\n    static getTotalPlayers() { // this is the thing that will give you the number of players\n        return Player.totalPlayers\n    }\n}\nconst player1 = new Player(\"RedIsSus\")\nconst player2 = new Player(\"Jimmy\")\n// I wonder if making new players would increase the player count\n\nconsole.log(_______________) // you want to print the *function* that will give you the player numbers.\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -497,10 +497,10 @@
    "source": [
     "%%js \n",
     "class Player {\n",
-    "    static _____ = 0 //hmm I wonder if this blank might have anything to do with line 4 after the .\n",
+    "    static ____ = 0 //Hmm I wonder what the constant, \"global\" variable could be in this context (pick from either totalPlayers or name)\n",
     "\n",
     "    constructor(name) {\n",
-    "        this.____ = name // i wonder what name could be\n",
+    "        this.____ = name // I wonder what name could be\n",
     "        this.id = ++Player.totalPlayers\n",
     "    }\n",
     "\n",
@@ -512,7 +512,7 @@
     "const player2 = new Player(\"Jimmy\")\n",
     "// I wonder if making new players would increase the player count\n",
     "\n",
-    "console.log(_______________) // you want to print the *function* that will give you the player numbers"
+    "console.log(_______________) // you want to print the *function* that will give you the player numbers."
    ]
   },
   {
@@ -529,7 +529,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "test2",
    "language": "python",
    "name": "python3"
   },
@@ -543,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
