--- a/_notebooks/2025-01-09-popcornHaxAnswerKey.ipynb
+++ b/_notebooks/2025-01-09-popcornHaxAnswerKey.ipynb
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -528,7 +528,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "test2",
    "language": "python",
    "name": "python3"
   },
@@ -542,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
