--- a/_notebooks/2025-01-09-lessonBook2.ipynb
+++ b/_notebooks/2025-01-09-lessonBook2.ipynb
@@ -229,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You now know how to define variables and vaguely know how to use them. However, with OOP programming there are many more variable types."
+    "You now know how to define variables and vaguely know how to use them. However, with OOP programming there are two more variable types. (for now?)"
    ]
   },
   {
