--- a/_notebooks/2025-01-09-popcornHaxAnswerKey.ipynb
+++ b/_notebooks/2025-01-09-popcornHaxAnswerKey.ipynb
@@ -524,6 +524,34 @@
    "source": [
     "<h2>Exercise dos<h2>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%js\n",
+    "class Car {\n",
+    "    constructor(color) {\n",
+    "        this.color = color;    // Instance variable\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "const car1 = new Car(\"red\");\n",
+    "const car2 = new Car(\"blue\");\n",
+    "\n",
+    "console.log(car1.color);  // \"red\"\n",
+    "console.log(car2.color);  // \"blue\"\n",
+    "\n",
+    "car1.color = \"yellow\";    // Only changes car1\n",
+    "console.log(car1.color);  // \"yellow\"\n",
+    "console.log(car2.color);  // still \"blue\""
+   ]
   }
  ],
  "metadata": {
