Final touches. Time to sleep!

--- a/_notebooks/2025-01-09-lessonBook2.ipynb
+++ b/_notebooks/2025-01-09-lessonBook2.ipynb
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -373,7 +373,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "class Character {\n    constructor(health){\n    this.health = health\n    }\n\n}\nglobalThis.devonmistry = new Character(5);\ndevonmistry.health = 2; //damaging devon \nconsole.log(devonmistry.health);\n",
+      "application/javascript": "class Character {\n    constructor(health){\n    this.health = health;\n    }\n\n}\nglobalThis.dumbmist = new Character(5);\ndumbmist.health = 2; //damaging devon \nconsole.log(dumbmist.health);\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -386,7 +386,7 @@
     "%%js\n",
     "class Character {\n",
     "    constructor(health){\n",
-    "    this.health = health\n",
+    "    this.health = health;\n",
     "    }\n",
     "\n",
     "}\n",
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -413,7 +413,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "// just so you guys can see that I'm not lying\nclass Character {\n    constructor(health) {\n    this.health = health\n    }\n\n}\nglobalThis.devonmistry = new Character(5)\nglobalThis.evansvetina = new Character(7)\nglobalThis.weststefani = new Character(9)\n\ndevonmistry.health =2 //damaging devon\nevansvetina.health =1 //damaging evan\nweststefani.health =3 //damaging west\nconsole.log(devonmistry.health)\nconsole.log(evansvetina.health)\nconsole.log(weststefani.health)\n",
+      "application/javascript": "// just so you guys can see that Im not lying\nclass Character {\n    constructor(health) {\n    this.health = health;\n    }\n\n}\nglobalThis.dumbmist = new Character(5);\nglobalThis.evansvetina = new Character(7);\nglobalThis.weststefany = new Character(9);\n\ndumbmist.health = 2; //damaging devon\nevansvetina.health = 1; //damaging evan\nweststefani.health = 3; //damaging west\nconsole.log(dumbmist.health);\nconsole.log(evansvetina.health);\nconsole.log(weststefany.health);\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -427,20 +427,20 @@
     "// just so you guys can see that Im not lying\n",
     "class Character {\n",
     "    constructor(health) {\n",
-    "    this.health = health\n",
+    "    this.health = health;\n",
     "    }\n",
     "\n",
     "}\n",
-    "globalThis.dumbmist = new Character(5)\n",
-    "globalThis.evansvetina = new Character(7)\n",
-    "globalThis.weststefani = new Character(9)\n",
+    "globalThis.dumbmist = new Character(5);\n",
+    "globalThis.evansvetina = new Character(7);\n",
+    "globalThis.weststefany = new Character(9);\n",
     "\n",
-    "dumbmist.health =2 //damaging devon\n",
-    "evansvetina.health =1 //damaging evan\n",
-    "weststefani.health =3 //damaging west\n",
-    "console.log(dumbmist.health)\n",
-    "console.log(evansvetina.health)\n",
-    "console.log(weststefani.health)"
+    "dumbmist.health = 2; //damaging devon\n",
+    "evansvetina.health = 1; //damaging evan\n",
+    "weststefani.health = 3; //damaging west\n",
+    "console.log(dumbmist.health);\n",
+    "console.log(evansvetina.health);\n",
+    "console.log(weststefany.health);"
    ]
   }
  ],
