--- a/_notebooks/2025-01-09-popcornHaxAnswerKey.ipynb
+++ b/_notebooks/2025-01-09-popcornHaxAnswerKey.ipynb
@@ -527,30 +527,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "class Car {\n    constructor(color, model) {\n        this.color = color;    // Instance variable\n        this.model = model;\n    }\n}\n\nconst car1 = new Car(\"Red \", \"2006 Nissan Murano\");\nconst car2 = new Car(\"Blue \", \"2019 Toyota Corolla\");\n\nconsole.log(car1.color + car1.model);  // Prints car colors and models.\nconsole.log(car2.color + car2.model);  \n\ncar1.color = \"Yellow \";    // Only changes car1.\nconsole.log(car1.color + car1.model);  // Logs changes.\nconsole.log(car2.color + car2.model);  // No change from earlier.\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%js\n",
     "class Car {\n",
-    "    constructor(color) {\n",
+    "    constructor(color, model) {\n",
     "        this.color = color;    // Instance variable\n",
+    "        this.model = model;\n",
     "    }\n",
     "}\n",
     "\n",
-    "const car1 = new Car(\"red\");\n",
-    "const car2 = new Car(\"blue\");\n",
+    "const car1 = new Car(\"Red \", \"2006 Nissan Murano\");\n",
+    "const car2 = new Car(\"Blue \", \"2019 Toyota Corolla\");\n",
     "\n",
-    "console.log(car1.color);  // \"red\"\n",
-    "console.log(car2.color);  // \"blue\"\n",
+    "console.log(car1.color + car1.model);  // Prints car colors and models.\n",
+    "console.log(car2.color + car2.model);  \n",
     "\n",
-    "car1.color = \"yellow\";    // Only changes car1\n",
-    "console.log(car1.color);  // \"yellow\"\n",
-    "console.log(car2.color);  // still \"blue\""
+    "car1.color = \"Yellow \";    // Only changes car1.\n",
+    "console.log(car1.color + car1.model);  // Logs changes.\n",
+    "console.log(car2.color + car2.model);  // No change from earlier."
    ]
   }
  ],
