--- a/_notebooks/2025-01-09-popcornHax.ipynb
+++ b/_notebooks/2025-01-09-popcornHax.ipynb
@@ -516,6 +516,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Exercise Dos</h2>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -524,7 +531,25 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%%js\n",
+    "class Car {\n",
+    "    constructor(color, model) {\n",
+    "        this.color = color;    // Instance variable\n",
+    "        this.____ = _____; //Set up another instanced variable\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "const car1 = new Car(\"Red \", \"2006 Nissan Murano\");\n",
+    "const car2 = new Car(\"Blue \", \"2019 Toyota Corolla\");\n",
+    "\n",
+    "console.log(car1.color + car1._____);  // Prints car colors and models. Make sure to reference the instanced variable here.\n",
+    "console.log(car2.color + car2._____);  \n",
+    "\n",
+    "car1.color = \"Yellow \";    // Only changes car1.\n",
+    "console.log(car1.color + car1._____);  // Logs changes.\n",
+    "console.log(car2.color + car2._____);  // No change from earlier."
+   ]
   }
  ],
  "metadata": {
